# sherpa_world_model_knowrob_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
doc/: codebook.md  design.md  usage.md
include/: ISherpaEventObserver.h  KnowrobConnection.h  KnowrobOSMDefs.h  RsgCommandObserver.h  RsgRosBridge.h  RsgToKnowrobObserver.h
launch/: sherpa_world_model_knowrob_bridge.launch
src/: KnowrobConnection.cpp  RsgCommandObserver.cpp  RsgRosBridge.cpp  RsgToKnowrobObserver.cpp  world_model_knowrob_bridge.cpp
