<?xml version="1.0"?>
<package>
  <name>sherpa_world_model_knowrob_bridge</name>
  <version>0.0.1</version>
  <description>The sherpa_world_model_knowrob_bridge package</description>
  
  <maintainer email="blumenthal@locomotec.com">Sebastian Blumenthal</maintainer>

  <author email="blumenthal@locomotec.com">Sebastian Blumenthal</author>
  <author email="bbrieber@cs.uni-bremen.de">Benjamin Brieber</author>

  <license>BSD, LGPLv2.1</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>json_prolog</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_bullet</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sherpa_world_model_knowrob_bridge_msgs</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2_bullet</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sherpa_world_model_knowrob_bridge_msgs</run_depend>

  <export>

  </export>
</package>
